Attempting to fix issue with blur not applying on mobile

--- a/src/app/[lang]/globals.css
+++ b/src/app/[lang]/globals.css
@@ -256,3 +256,9 @@
   --bs-form-invalid-color: #ea868f;
   --bs-form-invalid-border-color: #ea868f;
 }
+
+.backdrop-blur-xl {
+  background-color: rgba(255, 255, 255, 0.01);
+  --tw-backdrop-blur: blur(24px);
+  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
